--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html" target="_blank">
+      <a class="navbar-brand" href="index.html" >
         <span class="logo-nav"></span>
         BeEdu
       </a>
@@ -238,38 +238,38 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link" href="fitur.html" target="_blank">Fitur</a>
+            <a class="nav-link" href="fitur.html" >Fitur</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="testimoni.html" target="_blank">Testimoni</a>
+            <a class="nav-link" href="testimoni.html" >Testimoni</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="faq.html" target="_blank">FAQ</a>
+            <a class="nav-link" href="faq.html" >FAQ</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="blog.html" target="_blank">Blog</a>
+            <a class="nav-link" href="blog.html" >Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="pembayaran.html" target="_blank">Pembayaran</a>
+            <a class="nav-link" href="pembayaran.html" >Pembayaran</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="paketDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Paket Belajar
             </a>
             <ul class="dropdown-menu" aria-labelledby="paketDropdown">
-              <li><a class="dropdown-item" href="paket-sd.html" target="_blank">Paket Belajar SD</a></li>
-              <li><a class="dropdown-item" href="paket-sma.html" target="_blank">Paket Belajar SMA</a></li>
-              <li><a class="dropdown-item" href="paket-perguruan-tinggi.html" target="_blank">Paket Belajar Perguruan Tinggi</a></li>
+              <li><a class="dropdown-item" href="paket-sd.html" >Paket Belajar SD</a></li>
+              <li><a class="dropdown-item" href="paket-sma.html" >Paket Belajar SMA</a></li>
+              <li><a class="dropdown-item" href="paket-perguruan-tinggi.html" >Paket Belajar Perguruan Tinggi</a></li>
             </ul>
           </li>
           <li class="nav-item" id="profileItem" style="display: none;">
-            <a class="nav-link" href="profil.html" target="_blank">Profil</a>
+            <a class="nav-link" href="profil.html" >Profil</a>
           </li>
           <li class="nav-item" id="logoutItem" style="display: none;">
             <a class="nav-link" href="#" id="logoutBtn">Logout</a>
           </li>
           <li class="nav-item" id="parentItem" style="display: none;">
-            <a class="nav-link" href="parent.html" target="_blank">Monitoring Anak</a>
+            <a class="nav-link" href="parent.html" >Monitoring Anak</a>
           </li>
         </ul>
       </div>
@@ -382,7 +382,7 @@
     </footer>
 
   <!-- WhatsApp Floating Button -->
-  <a href="https://wa.me/6281367315144" class="whatsapp-btn" target="_blank">
+  <a href="https://wa.me/6281367315144" class="whatsapp-btn" >
     <i class="fab fa-whatsapp"></i>
   </a>
 
