--- a/fitur.html
+++ b/fitur.html
@@ -31,7 +31,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html" <a href="fitur.html">Fitur</a>>
+      <a class="navbar-brand" href="index.html" target="_blank">
         <span class="logo-nav"></span>
         BeEdu
       </a>
@@ -40,22 +40,22 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="index.html" <a href="fitur.html">Fitur</a>>Beranda</a></li>
-          <li class="nav-item"><a class="nav-link" href="testimoni.html" <a href="fitur.html">Fitur</a>>Testimoni</a></li>
-          <li class="nav-item"><a class="nav-link" href="faq.html" <a href="fitur.html">Fitur</a>>FAQ</a></li>
-          <li class="nav-item"><a class="nav-link" href="blog.html" <a href="fitur.html">Fitur</a>>Blog</a></li>
-          <li class="nav-item"><a class="nav-link" href="pembayaran.html" <a href="fitur.html">Fitur</a>>Pembayaran</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html" target="_blank">Beranda</a></li>
+          <li class="nav-item"><a class="nav-link" href="testimoni.html" target="_blank">Testimoni</a></li>
+          <li class="nav-item"><a class="nav-link" href="faq.html" target="_blank">FAQ</a></li>
+          <li class="nav-item"><a class="nav-link" href="blog.html" target="_blank">Blog</a></li>
+          <li class="nav-item"><a class="nav-link" href="pembayaran.html" target="_blank">Pembayaran</a></li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="paketDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Paket Belajar</a>
             <ul class="dropdown-menu" aria-labelledby="paketDropdown">
-              <li><a class="dropdown-item" href="paket-sd.html" <a href="fitur.html">Fitur</a>>Paket Belajar SD</a></li>
-              <li><a class="dropdown-item" href="paket-sma.html" <a href="fitur.html">Fitur</a>>Paket Belajar SMA</a></li>
-              <li><a class="dropdown-item" href="paket-perguruan-tinggi.html" <a href="fitur.html">Fitur</a>>Paket Belajar Perguruan Tinggi</a></li>
+              <li><a class="dropdown-item" href="paket-sd.html" target="_blank">Paket Belajar SD</a></li>
+              <li><a class="dropdown-item" href="paket-sma.html" target="_blank">Paket Belajar SMA</a></li>
+              <li><a class="dropdown-item" href="paket-perguruan-tinggi.html" target="_blank">Paket Belajar Perguruan Tinggi</a></li>
             </ul>
           </li>
-          <li class="nav-item" id="profileItem" style="display: none;"><a class="nav-link" href="profil.html" <a href="fitur.html">Fitur</a>>Profil</a></li>
+          <li class="nav-item" id="profileItem" style="display: none;"><a class="nav-link" href="profil.html" target="_blank">Profil</a></li>
           <li class="nav-item" id="logoutItem" style="display: none;"><a class="nav-link" href="#" id="logoutBtn">Logout</a></li>
-          <li class="nav-item" id="parentItem" style="display: none;"><a class="nav-link" href="parent.html" <a href="fitur.html">Fitur</a>>Monitoring Anak</a></li>
+          <li class="nav-item" id="parentItem" style="display: none;"><a class="nav-link" href="parent.html" target="_blank">Monitoring Anak</a></li>
         </ul>
       </div>
     </div>
@@ -113,7 +113,7 @@
       <span class="logo-nav" style="margin: 0 auto; display: block;"></span>
     </footer>
 
-  <a href="https://wa.me/6281367315144" class="whatsapp-btn" <a href="fitur.html">Fitur</a>><i class="fab fa-whatsapp"></i></a>
+  <a href="https://wa.me/6281367315144" class="whatsapp-btn" target="_blank"><i class="fab fa-whatsapp"></i></a>
   <a href="#" class="login-btn" data-bs-toggle="modal" data-bs-target="#loginModal"><i class="fas fa-sign-in-alt"></i></a>
   <a href="#" class="register-btn" data-bs-toggle="modal" data-bs-target="#registerModal"><i class="fas fa-user-plus"></i></a>
 
